<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/discover_movies_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/discover_movies_toolbar_title"
        app:titleTextColor="@color/colorTextLighter"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/discover_movies_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/popular_movies_title_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/discover_movies_popular"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/popular_movies_title_tv"/>

            <TextView
                android:id="@+id/trending_movies_title_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/discover_movies_trending"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/popular_movies_rv"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_title_tv"/>

            <TextView
                android:id="@+id/top_movies_title_tv"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/discover_movies_top_rated"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_rv"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_movies_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/top_movies_title_tv"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>